cabal-version:      2.2
name:               gogol-apps-tasks
version:            0.5.0
synopsis:           Google Tasks SDK.
homepage:           https://github.com/brendanhay/gogol
bug-reports:        https://github.com/brendanhay/gogol/issues
license:            MPL-2.0
license-file:       LICENSE
author:             Brendan Hay
maintainer:         Brendan Hay <brendan.g.hay+gogol@gmail.com>
copyright:          Copyright (c) 2015-2022 Brendan Hay
category:           Google
build-type:         Simple
extra-source-files:
  README.md
  src/.gitkeep

description:
  The Google Tasks API lets you manage your tasks and task lists.
  .
  /Warning:/ This is an experimental prototype/preview release which is still
  under exploratory development and not intended for public use, caveat emptor!
  .
  This library is compatible with version @v1@
  of the API.

source-repository head
  type:     git
  location: git://github.com/brendanhay/gogol.git
  subdir:   gogol-apps-tasks

flag no-field-selectors
  description: If field selectors should be omitted, requires GHC >=9.2
  default:     True

library
  default-language: Haskell2010
  hs-source-dirs:   src gen
  ghc-options:
    -Wall -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -funbox-strict-fields

  if (flag(no-field-selectors) && impl(ghc >=9.1))
    default-extensions: NoFieldSelectors

  exposed-modules:
    Network.Google.AppsTasks
    Network.Google.AppsTasks.Tasks.Clear
    Network.Google.AppsTasks.Tasks.Delete
    Network.Google.AppsTasks.Tasks.Get
    Network.Google.AppsTasks.Tasks.Insert
    Network.Google.AppsTasks.Tasks.List
    Network.Google.AppsTasks.Tasks.Move
    Network.Google.AppsTasks.Tasks.Patch
    Network.Google.AppsTasks.Tasks.Tasklists.Delete
    Network.Google.AppsTasks.Tasks.Tasklists.Get
    Network.Google.AppsTasks.Tasks.Tasklists.Insert
    Network.Google.AppsTasks.Tasks.Tasklists.List
    Network.Google.AppsTasks.Tasks.Tasklists.Patch
    Network.Google.AppsTasks.Tasks.Tasklists.Update
    Network.Google.AppsTasks.Tasks.Update
    Network.Google.AppsTasks.Types

  other-modules:
    Network.Google.AppsTasks.Internal.Product
    Network.Google.AppsTasks.Internal.Sum

  build-depends:
    , base        >=4.12  && <5
    , gogol-core  >=0.5.0 && <0.5.1
