name:                  gogol-autoscaler
version:               0.3.0
synopsis:              Google Compute Engine Autoscaler SDK.
homepage:              https://github.com/brendanhay/gogol
bug-reports:           https://github.com/brendanhay/gogol/issues
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2015-2016 Brendan Hay
category:              Network, Google, Cloud
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md src/.gitkeep

description:
    The Google Compute Engine Autoscaler API provides autoscaling for groups
    of Cloud VMs.
    .
    /Warning:/ This is an experimental prototype/preview release which is still
    under exploratory development and not intended for public use, caveat emptor!
    .
    This library is compatible with version @v1beta2@
    of the API.
    .
    Labels:
    .
    * Limited Availability

source-repository head
    type:     git
    location: git://github.com/brendanhay/gogol.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:       -Wall

    exposed-modules:
          Network.Google.Autoscaler
        , Network.Google.Autoscaler.Types
        , Network.Google.Resource.Autoscaler.Autoscalers.Delete
        , Network.Google.Resource.Autoscaler.Autoscalers.Get
        , Network.Google.Resource.Autoscaler.Autoscalers.Insert
        , Network.Google.Resource.Autoscaler.Autoscalers.List
        , Network.Google.Resource.Autoscaler.Autoscalers.Patch
        , Network.Google.Resource.Autoscaler.Autoscalers.Update
        , Network.Google.Resource.Autoscaler.ZoneOperations.Delete
        , Network.Google.Resource.Autoscaler.ZoneOperations.Get
        , Network.Google.Resource.Autoscaler.ZoneOperations.List
        , Network.Google.Resource.Autoscaler.Zones.List

    other-modules:
          Network.Google.Autoscaler.Types.Product
        , Network.Google.Autoscaler.Types.Sum

    build-depends:
          gogol-core == 0.3.0.*
        , base       >= 4.7 && < 5
